== v0.7.0
* Major changes to results object returned from the client (and models). Results are no longer allowed to be nil, and Array is decorated with non result response information.
* Finished listing photo uploads
* ListPrice save operation for listings
* Listing contraints processing
== v0.6.7 2011-09-02
* YAML key management
== v0.6.6 2011-08-30
* Added methods for returning street, region, and full address for a listing
== v0.6.5 2011-08-02
*  Fixed some recursive gemspec issues from jewler by removing jeweler and going with some of our own custom rake tasks.
== v0.6.4 2011-08-02
*  added public method for the listing carts service specified
*  added spec for portal listing cart method
== v0.6.3 2011-08-02
*  Fix gemspec error on CLI launch (bundler)
== v0.6.2 2011-07-29
*  Added command to make irb sessions rocktastic
== v0.6.1 2011-07-14
*  Fixed request headers to match api expectations
*  OAuth2 grant types redesign
*  "provided" saved searches
*  Portal account saving
== v0.5.9 2011-07-12
*  Modify Collect to handle FixNums in the case of pagination=count to my/office listings
== v0.5.8 2011-07-08
*  Add finders to SharedListing model
*  fixed log message
== v0.5.7 2011-07-07
*  Add /my/contact support
== v0.5.6 2011-07-07
*  More build woes.
== v0.5.5 2011-07-07
== v0.5.4 2011-07-01
*  Added the add listing methods to the cart instance.
*  Added the remove listing methods to the cart instance.
*  Accounts service by office changes
== v0.5.3 2011-06-28
*  API error handling bugfix to log decent messages
*  Fixed the OAuth flow.
*  Provide primary image types
== v0.5.2 2011-06-23
== v0.5.1 2011-06-03
*  Upgraded dependencies to latest releases.
*  Added put / delete functionality.
*  Make method_missing and respond_to? methods match the expected behavior and add specs to define those behaviors.
*  Properly escape uri paths when making requests.
*  SavedSearch resource.
== v0.4.6 2011-05-13
*  Added notify option to contacts